add runTestTypes gradle task for example